View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0027172 | Open CASCADE | OCCT:Visualization | public | 2016-02-17 17:34 | 2016-04-20 15:49 |
Reporter | kgv | Assigned To | |||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2010 | ||
Product Version | 6.8.0 | ||||
Target Version | 7.0.0 | Fixed in Version | 7.0.0 | ||
Summary | 0027172: Visualization - avoid signed integer overflow within Graphic3d_ArrayOfPrimitives | ||||
Description | The following line is not OK since properties have signed integer type:memset (myAttribs->ChangeData (0), 0, myAttribs->Stride * myAttribs->NbElements); | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR27172 has been created by kgv. SHA-1: 5d84771a0d2420777e9b913643b81c443d7cfeb5 Detailed log of new commits: Author: kgv Date: Wed Feb 17 17:37:43 2016 +0300 0027172: Visualization - avoid signed integer overflow within Graphic3d_ArrayOfPrimitives |
|
Please just check compilation, testing is not needed. |
|
Dear BugMaster, Branch CR27172 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms. SHA-1: 5d84771a0d2420777e9b913643b81c443d7cfeb5 Number of compiler warnings: occt component: Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS: 0 (0 on master) products component: Linux: 36 (36 on master) Windows: 0 (0 on master) |
|
Branch CR27172 has been deleted by kgv. SHA-1: 5d84771a0d2420777e9b913643b81c443d7cfeb5 |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-02-17 17:34 | kgv | New Issue | |
2016-02-17 17:34 | kgv | Assigned To | => kgv |
2016-02-17 17:37 | git | Note Added: 0050901 | |
2016-02-17 17:39 | kgv | Relationship added | related to 0024406 |
2016-02-17 17:39 | kgv | Note Added: 0050902 | |
2016-02-17 17:39 | kgv | Assigned To | kgv => bugmaster |
2016-02-17 17:39 | kgv | Status | new => resolved |
2016-02-17 17:39 | kgv | Product Version | 7.0.0 => 6.8.0 |
2016-02-17 17:39 | kgv | Status | resolved => reviewed |
2016-02-17 17:40 | kgv | Note Edited: 0050902 | |
2016-02-17 17:49 |
|
Assigned To | bugmaster => apv |
2016-02-18 10:20 |
|
Test case number | => Not needed |
2016-02-18 10:22 |
|
Note Added: 0050926 | |
2016-02-18 10:22 |
|
Assigned To | apv => bugmaster |
2016-02-18 10:22 |
|
Status | reviewed => tested |
2016-02-21 08:52 |
|
Changeset attached | => occt master 6273fa4b |
2016-02-21 08:52 |
|
Assigned To | bugmaster => abv |
2016-02-21 08:52 |
|
Status | tested => verified |
2016-02-21 08:52 |
|
Resolution | open => fixed |
2016-04-17 12:57 | git | Note Added: 0052779 | |
2016-04-20 15:43 |
|
Fixed in Version | => 7.0.0 |
2016-04-20 15:49 |
|
Status | verified => closed |