0027172: Visualization - avoid signed integer overflow within Graphic3d_ArrayOfPrimitives